# student_service

./: .env  Cargo.toml
examples/: get_students.rs
migrations/2018-11-02-064121_create_student/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
