[package]
name = "student_service"
version = "0.1.0"
authors = ["ben-han-cn <ben.han.cn@gmail.com>"]

[dependencies]
diesel = { version = "1.0.0", features= ["postgres"] }
dotenv = "0.9.0"
gotham = { path = "../../web/gotham/gotham" }
gotham_derive = { path = "../../web/gotham/gotham_derive" }

hyper = "0.12"
mime = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
